--- a/src/ui/hospital/ManageEncounterPane.form
+++ b/src/ui/hospital/ManageEncounterPane.form
@@ -134,9 +134,9 @@
     <Component class="javax.swing.JButton" name="btnView">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/view.png"/>
+          <Image iconType="3" name="/assets/write.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="View"/>
+        <Property name="text" type="java.lang.String" value="Edit"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewActionPerformed"/>
