16th commit: optimize the way of input city and zipcode
TODO:
1. integration test
2. change pic
3. add readme file
4. 2 diagrams
6. unit test for search

--- a/src/ui/patient/PatientRegisterFrame.form
+++ b/src/ui/patient/PatientRegisterFrame.form
@@ -223,6 +223,7 @@
             </Component>
             <Component class="javax.swing.JComboBox" name="cbbCommunity">
               <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbbCommunityItemStateChanged"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbbCommunityActionPerformed"/>
               </Events>
               <AuxValues>
