--- a/src/ui/hospital/EditDoctorInfoFrame.form
+++ b/src/ui/hospital/EditDoctorInfoFrame.form
@@ -401,16 +401,8 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="cbbDepartment">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
-                <StringItem index="0" value="Ophtalmology"/>
-                <StringItem index="1" value="Internal Medicine"/>
-                <StringItem index="2" value="Surgery"/>
-                <StringItem index="3" value="Pediatrics"/>
-                <StringItem index="4" value="Obstetrics and Gynecology"/>
-                <StringItem index="5" value="Stomatology"/>
-                <StringItem index="6" value="Neurology"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="for(int i=0;i&lt;departmentList.length;i++) {&#xa;    if(departmentList[i].equals(selectedDoctor.getDepartment())) {&#xa;        cbbDepartment.setSelectedIndex(i);&#xa;}&#xa;}">
+              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(departmentList)" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
@@ -418,6 +410,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbbDepartmentActionPerformed"/>
           </Events>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="String[] departmentList = { &quot;Ophtalmology&quot;, &quot;Internal Medicine&quot;, &quot;Surgery&quot;, &quot;Pediatrics&quot;, &quot;Obstetrics and Gynecology&quot;, &quot;Stomatology&quot;, &quot;Neurology&quot; };"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
