--- a/src/ui/hospital/ManagePatientPane.form
+++ b/src/ui/hospital/ManagePatientPane.form
@@ -29,7 +29,9 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="btnRefesh" min="-2" pref="117" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnEdit1" min="-2" pref="117" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnEdit" min="-2" pref="117" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -54,6 +56,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnEdit" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="btnRefesh" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
+                  <Component id="btnEdit1" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="85" max="32767" attributes="0"/>
           </Group>
@@ -88,7 +91,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="PatientID" type="java.lang.String"/>
+                <Column editable="false" title="PatientID" type="java.lang.String"/>
                 <Column editable="false" title="Name" type="java.lang.String"/>
                 <Column editable="false" title="Phone" type="java.lang.String"/>
                 <Column editable="false" title="DateOfBirth" type="java.lang.String"/>
@@ -158,6 +161,17 @@
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Patient Management"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnEdit1">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/assets/add.png"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Add"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEdit1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
